# bowgame

./: .gitignore  Cargo.toml  game_config.toml  net.md  ui_config.toml
src/: _my_serde.rs  assets.rs  draw.rs  helper.rs  main.rs  net.rs
