[package]
name = "bowgame"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
serde = "1"
serde_derive = "1"
toml = "0.5"
rand = { version = "0.7.3", features = ["small_rng"] }
bincode = "1.2.1"
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }